FIX for overlapping `flexbox` items on Ubuntu Touch, set initial viewport scale to 1

--- a/css/base.css
+++ b/css/base.css
@@ -147,6 +147,8 @@ header h1, header h2, header h3, header h4, header h5, header p, header a, foote
 }
 .flexbox-grid > * {
 	flex: 1 0 20%;
+	flex-shrink: 0;
+	flex-basis: auto;
 }
 .flexbox-grid figure {
 	position: relative;
